@@ -1,16 +1,31 @@
 # -*- coding: utf-8 -*-
 
+import os
 import sys
 import transaction
 from plone import api
 
 
+# Copied from imio.pyutils
 def verbose(msg):
     print '>> %s' % msg
 
 
 def error(msg):
     print >> sys.stderr, '!! %s' % msg
+
+
+def load_var(infile, var):
+    """
+        load a dictionary or a list from a file
+    """
+    if os.path.exists(infile):
+        ofile = open(infile, 'r')
+        if isinstance(var, dict):
+            var.update(eval(ofile.read()))
+        elif isinstance(var, list):
+            var.extend(eval(ofile.read()))
+        ofile.close()
 
 
 # Parameters check
@@ -60,7 +75,7 @@ def run_upgrade():
     transaction.commit()
 
 
-def run_auth():
+def auth():
     from Products.ExternalMethod.ExternalMethod import manage_addExternalMethod
     # we add the external method cputils_install
     if not hasattr(app, 'cputils_install'):
@@ -74,9 +89,49 @@ def run_auth():
     transaction.commit()
 
 
+def message():
+    from collective.messagesviewlet.utils import add_message, _richtextval
+    id, warning_file = sys.argv[4:6]
+    dic = {}
+    load_var(warning_file, dic)
+    params = dic[id]
+    modified = False
+    #verbose("Given dictionary: %s" % params)
+    config = obj['messages-config']
+    # update existing message
+    if id in config:
+        msg = config[id]
+        verbose("Updating message with those values: %s" % params)
+        if 'text' in params:
+            msg.text = _richtextval(params.pop('text'))
+    # create a new message
+    else:
+        verbose("Creating message with those values: %s" % params)
+        attrs = {}
+        attrs.get('msg_type', 'warning')
+        msg = add_message(id, params.get('title', 'imio.updates'), params['text'], **attrs)
+
+    for key in params:
+        if key not in ('text', 'activate'):
+            setattr(msg, key, params[key])
+            modified = True
+    if modified:
+        msg.reindexObject()
+
+    try:
+        if params['activate']:
+            api.content.transition(msg, transition='activate')
+            verbose("Message %s activated" % msg)
+        else:
+            api.content.transition(msg, transition='deactivate')
+            verbose("Message %s deactivated" % msg)
+    except Exception:
+        pass
+    transaction.commit()
+
 info = ["You can pass following parameters (with the first one always script number):", "step: run profile step",
-        "upgrade: run profile upgrade", "auth: enable/disable authentication plugins"]
-scripts = {'step': run_step, 'upgrade': run_upgrade, 'auth': run_auth}
+        "upgrade: run profile upgrade", "auth: enable/disable authentication plugins", "message"]
+scripts = {'step': run_step, 'upgrade': run_upgrade, 'auth': auth, 'message': message}
 
 if len(sys.argv) < 4 or sys.argv[3] not in scripts:
     error("Bad script parameter")
